# MoviesFinderApp

./: .gitignore  CMakeLists.txt  GuiManager.cpp  GuiManager.h  ImageLoader.cpp  ImageLoader.h  Movie.h  OMDbApi.cpp  OMDbApi.h  README.md  main.cpp
